--- a/0_about.Rmd
+++ b/0_about.Rmd
@@ -4,7 +4,7 @@ author: "PSLèbre"
 output: html_document
 
 ---
-```{r, setup, include=FALSE ,eval=TRUE, cache=TRUE}
+```{r, setup, include=FALSE ,eval=TRUE, cache=FALSE}
 #library(BAMMtools)
 library(htmltools)
 library(htmlwidgets)
