ajout des filtres infra et reprise ACM

--- a/1.1_demo.Rmd
+++ b/1.1_demo.Rmd
@@ -248,7 +248,7 @@ tab <- tab %>% filter(!EPCI %in% c('BFC','METRO'))
 
 sd <- tab_filtre(geo=EPCI) 
 
-filter_checkbox("dep","Département",sd,group=~Libellé, 
+filter_checkbox("dep","Département",sd,group=~filtre_DEP, 
                 inline=TRUE, allLevels = FALSE)
 
 sd %>% datafiltre()
@@ -305,11 +305,12 @@ tab <- tab %>% filter(!BV2012 %in% c('BFC','METRO'))
 
 sd <- tab_filtre(geo=BV2012)
 
-filter_checkbox("dep","Département",sd,group=~Libellé, 
+filter_checkbox("dep","Département",sd,group=~filtre_DEP, 
                 inline=TRUE, allLevels = FALSE)
 
 sd %>% datafiltre()
 ```
+
 ### Carte BV
 
 ```{r}
