--- a/5.2_licences.Rmd
+++ b/5.2_licences.Rmd
@@ -733,7 +733,19 @@ tab %>%
   add_header_above(c( " "=3,"Taux de licences parmi"=4,"Part de licences "=2) ) %>%
   credits() %>%
   footnote(number = c("F= Fédération \n","FF = Fédération Française")) %>%
-  scroll_box(height = "780px")
+  scroll_box(height = "800px")
+```
+
+### Tableau filtré
+```{r}
+tab <- tab %>% filter(!EPCI %in% c('BFC','METRO'))
+
+sd <- tab_filtre(geo=EPCI)
+
+filter_checkbox("dep","Département",sd,group=~filtre_DEP, 
+                inline=TRUE, allLevels = FALSE)
+
+sd %>% datafiltre()
 ```
 
 ### Carte ECPI {data-height="800"}
@@ -775,7 +787,19 @@ tab %>%
   add_header_above(c( " "=3,"Taux de licences parmi"=4,"Part de licences "=2) ) %>%
   credits() %>%
   footnote(number = c("F= Fédération \n","FF = Fédération Française")) %>%
-  scroll_box(height = "780px")
+  scroll_box(height = "800px")
+```
+
+### Tableau filtré
+```{r}
+tab <- tab %>% filter(!BV2012 %in% c('BFC','METRO'))
+
+sd <- tab_filtre(geo=BV2012)
+
+filter_checkbox("dep","Département",sd,group=~filtre_DEP, 
+                inline=TRUE, allLevels = FALSE)
+
+sd %>% datafiltre()
 ```
 
 ### Carte BV {data-height="800"}
