--- a/5.5_RES.Rmd
+++ b/5.5_RES.Rmd
@@ -42,8 +42,6 @@ load("data/sport/RES.RData")
 creditsRES <- function(.tbl){
   .tbl %>%
     column_spec(3, bold=T) %>%
-    add_header_above(c(" "=3,"structurant"=2,"tennis"=2,"terrains"=2, 
-                       "natation"=1, " ")) %>%
     footnote(general = " MEDES recensement des équipements sportifs 2020", 
              general_title = "Source : ",
              number = c("structurant : salles de sport collectifs, gymnases et salles polyvalentes \n",
@@ -98,20 +96,20 @@ res_infra <- function(geo) {
     sum_res({{geo}}) %>%
     arrange(desc(équipements))
 
-  tab_nombre <- 
+  tableau <- 
     tab %>%
-    select(-pop) %>%
+    select(-pop) 
+  
+  tab_nombre <- 
+    tableau %>%
     cc_kable("rcrrrrrrrrr") %>%
     column_spec(3, bold=T) %>%
     add_header_above(c(" "=3,"structurant"=2,
                        "tennis"=2,"terrains"=2, "natation"=1)) %>%
-    credits_res() %>%
-    footnote(number = c("structurant : salles de sport collectifs \n",
-                        "proximité : terrains en accès libre"), 
-             footnote_as_chunk = T) %>%
+    creditsRES() %>%
     scroll_box(height="780px") 
   
-  tab_taux <- 
+  taux <- 
     tab %>% 
     taux_res() %>%
     select(1:3,19:26) %>%
@@ -120,21 +118,18 @@ res_infra <- function(geo) {
            tennis=txtennis,`dont couverts`=txtennis_couv,
            `grands jeux`=txgdsjeux,proximité=txproxi,
            `tous bassins`=txbassins) %>%
-    arrange(desc(équipements)) %>%
+    arrange(desc(équipements)) 
+  
+  tab_taux <- 
+    taux %>%
     cc_kable("rcrllrlrllr") %>%
     column_spec(3, bold=T) %>%
     add_header_above(c(" "=4,"taux structurant"=2,
                        "taux tennis"=2,"taux terrains"=2, "taux natation"=1)) %>%
-    credits_res() %>%
-    footnote(number = c("structurant : salles de sport collectifs \n",
-                        "proximité : terrains en accès libre"), 
-             footnote_as_chunk = T) %>%
-    footnote(general_title = "Taux d'équipements :",
-           general = "pour 10 000 habitants",
-           footnote_as_chunk = T) %>%
+    creditsRES() %>%
     scroll_box(height="780px")
 
-  return(list(tab_nombre=tab_nombre,tab_taux=tab_taux))
+  return(list(tableau=tableau,taux=taux,tab_nombre=tab_nombre,tab_taux=tab_taux))
 }
 
 #carto
@@ -152,10 +147,14 @@ carto <- function(.map,x=1) {
 groupes <- c("taux équipements","taux structurant","taux grands jeux","taux proximité", "taux bassins")
 
 popup <- carte@data %>% select(Libellé, Population = pop,
-                               `Nombre d'équipements`= équipements,`Taux d'équipements`=txequip,
-                               `Taux de bassins`=txbassins, `Taux de grands jeux`=txgdsjeux,
-                               `Taux de structurant`=txstructurant,`Taux de gymnases`=txgymnases,
-                               `Taux de tennis`=txtennis,`Taux de tennis couverts`=txtennis_couv,
+                               `Nombre d'équipements`= équipements,
+                               `Taux d'équipements`=txequip,
+                               `Taux de bassins`=txbassins, 
+                               `Taux de grands jeux`=txgdsjeux,
+                               `Taux de structurant`=txstructurant,
+                               `Taux de gymnases`=txgymnases,
+                               `Taux de tennis`=txtennis,
+                               `Taux de tennis couverts`=txtennis_couv,
                                `Taux d'équipements de proximité`=txproxi)
                 
   
@@ -206,12 +205,17 @@ popup <- carte@data %>% select(Libellé, Population = pop,
                        #maxValues = 100,
                        type = "pie",
                        chartdata = carte@data %>% 
-                                        mutate(`tennis extérieurs`=tennis-`dont couverts`,
-                                               autres = équipements - structurant - tennis -
-                                                 `grands jeux` - proximité - `tous bassins`) %>%
+                                        mutate(`tennis extérieurs`=
+                                                 tennis-`dont couverts`,
+                                               autres = 
+                                                 équipements - structurant - tennis -
+                                                 `grands jeux` - proximité - 
+                                                 `tous bassins`) %>%
                                         select(structurant,`grands jeux`,
-                                               `tennis extérieurs`, `tennis couverts`=`dont couverts`,
-                                               `terrains de proximité`=proximité, `tous bassins`, autres),
+                                               `tennis extérieurs`, 
+                                               `tennis couverts`=`dont couverts`,
+                                               `terrains de proximité`=proximité, 
+                                               `tous bassins`, autres),
                 colorPalette = coul,
                 width = sqrt(x * carte$équipements) ,  #paramètre d'échelle 
                 opacity = 0.6
@@ -246,11 +250,13 @@ tab <- equip %>%
   adorn_totals("row",name = "FM", fill = "France Métro") 
 
 tab %>%
-  mutate(`taux d'équipements`=color_bar("orange")
+  mutate(`taux d'équipements`=color_bar("lightblue")
          (digits(10000*équipements/pop,1,decimal.mark=","))) %>% 
   select(-pop) %>%
 
   cc_kable("rcrrrrrrrrl") %>%
+  add_header_above(c(" "=3,"structurant"=2,"tennis"=2,"terrains"=2, 
+                     "natation"=1, " ")) %>%
   creditsRES()
 
 ```
@@ -336,11 +342,13 @@ tab <- equip %>%
   adorn_totals("row",name = "BFC", fill = "Bourgogne-Franche-Comté") 
 
 tab %>%
-  mutate(`taux d'équipements`=color_bar("orange")
+  mutate(`taux d'équipements`=color_bar("lightblue")
          (digits(10000*équipements/pop,1,decimal.mark=","))) %>% 
   select(-pop) %>%
 
   cc_kable("rcrrrrrrrrl") %>%
+  add_header_above(c(" "=3,"structurant"=2,"tennis"=2,"terrains"=2, 
+                     "natation"=1, " ")) %>%  
   creditsRES()
 ```
 
@@ -469,14 +477,42 @@ leaflet(carte) %>%
 ### Comparaisons établissements publics de coopération intercommunale {vertical_layout="scroll"}
 
 ```{r}
-res_infra(geo=EPCI)[[1]]
+res_infra(geo=EPCI)[["tab_nombre"]]
+```
+
+### Tableau filtré
+```{r}
+tab <- res_infra(geo=EPCI)[["tableau"]] %>% 
+  filter(!EPCI %in% c('BFC','METRO')) %>% 
+  rename(LibEPCI=Libellé)
+
+sd <- tab_filtre(geo=EPCI)
+
+filter_checkbox("dep","Département",sd,group=~filtre_DEP, 
+                inline=TRUE, allLevels = FALSE)
+
+sd %>% datafiltre()
 ```
 
 ### Taux d'équipements
 
 ```{r}
-res_infra(geo=EPCI)[[2]]
+res_infra(geo=EPCI)[["tab_taux"]]
 
+```
+
+### Taux filtrés
+```{r}
+tab <- res_infra(geo=EPCI)[["taux"]] %>% 
+  filter(!EPCI %in% c('BFC','METRO')) %>% 
+  rename(LibEPCI=Libellé)
+
+sd <- tab_filtre(geo=EPCI)
+
+filter_checkbox("dep","Département",sd,group=~filtre_DEP, 
+                inline=TRUE, allLevels = FALSE)
+
+sd %>% datafiltre()
 ```
 
 ### Carte  {data-height="800"}
@@ -504,13 +540,42 @@ leaflet(carte) %>%
 ### Comparaisons bassins de vie {vertical_layout="scroll"}
 
 ```{r}
-res_infra(geo=BV2012)[[1]]
+res_infra(geo=BV2012)[["tab_nombre"]]
 ```
+
+### Tableau filtré
+```{r}
+tab <- res_infra(geo=BV2012)[["tableau"]] %>% 
+  filter(!BV2012 %in% c('BFC','METRO')) %>% 
+  rename(LibBV=Libellé)
+
+sd <- tab_filtre(geo=BV2012)
+
+filter_checkbox("dep","Département",sd,group=~filtre_DEP, 
+                inline=TRUE, allLevels = FALSE)
+
+sd %>% datafiltre()
+```
+
 
 ### Taux d'équipements 
 
 ```{r}
-res_infra(geo=BV2012)[[2]]
+res_infra(geo=BV2012)[["tab_taux"]]
+```
+
+### Tableau filtré
+```{r}
+tab <- res_infra(geo=BV2012)[["taux"]] %>% 
+  filter(!BV2012 %in% c('BFC','METRO')) %>% 
+  rename(LibBV=Libellé)
+
+sd <- tab_filtre(geo=BV2012)
+
+filter_checkbox("dep","Département",sd,group=~filtre_DEP, 
+                inline=TRUE, allLevels = FALSE)
+
+sd %>% datafiltre()
 ```
 
 ### Carte {data-height="800"}
